# aspia

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PHASE2_QT_REMOVAL_PLAN.md  vcpkg.json
source/: CMakeLists.txt
source/base/: CMakeLists.txt
source/client/: CMakeLists.txt
source/client_win32/: CMakeLists.txt  about_dialog.cc  about_dialog.h  app.cc  app.h  auth_dialog.cc  auth_dialog.h  chat_session_adapter.cc  chat_session_adapter.h  chat_session_window.cc  chat_session_window.h  client.manifest  client.rc  console_address_book_dialog.cc  console_address_book_dialog.h  console_computer_dialog.cc  console_computer_dialog.h  console_computer_group_dialog.cc  console_computer_group_dialog.h  console_fast_connect_dialog.cc  console_fast_connect_dialog.h  console_main_window.cc  console_main_window.h  console_open_address_book_dialog.cc  console_open_address_book_dialog.h  console_update_settings_dialog.cc  console_update_settings_dialog.h  desktop_config_dialog.cc  desktop_config_dialog.h  desktop_session_adapter.cc  desktop_session_adapter.h  desktop_session_window.cc  desktop_session_window.h  desktop_toolbar.cc  desktop_toolbar.h  download_dialog.cc  download_dialog.h  entry_point.cc  file_panel.cc  file_panel.h  (+97 more)
source/common/: CMakeLists.txt
source/console/: CMakeLists.txt
source/host/: CMakeLists.txt
source/relay/: CMakeLists.txt
source/router/: CMakeLists.txt
